@@ -3,10 +3,10 @@ TODO list
 
 Version 1.0 BETA
 
-    - setting for program temperatures via LCD
     - window open function
     - Valve protection (CyCL)
     - hourbar line
+    - "watched" variables in LCD service menu
     - default setting restore
     - improve doxygen comments
     - user documentation generated by doxygen 
