@@ -68,7 +68,7 @@ typedef struct { // each variables must be uint8_t or int8_t without exception
 extern config_t config;
 #define config_raw ((uint8_t *) &config)
 #define kx_d ((uint8_t *) &config.temp_cal_table0)
-#define temperature_table(i) (((uint8_t *) &config.temperature0)[i])
+#define temperature_table ((uint8_t *) &config.temperature0)
 #define CONFIG_RAW_SIZE (sizeof(config_t))
 
 extern uint16_t EEPROM ee_timers[8][RTC_TIMERS_PER_DOW];
